[FIX] mail: preview image distorted on mobile
This commit fix the o_mail_preview_image css by applying the same
rules as desktop.

Task ID: 2200099

X-original-commit: f4a106c7fa5ba21bba2811d5c51cbf5bf57f4dc9

--- a/addons/mail/static/src/scss/systray.scss
+++ b/addons/mail/static/src/scss/systray.scss
@@ -72,14 +72,8 @@
                 .o_mail_preview {
                     min-height: 50px;
                     padding: 5px;
-                    .o_mail_preview_image {
-                        width: 40px;
-                        height: 40px;
-                        object-fit: cover;
-
-                        .fa-circle-o {
-                            display: none;
-                        }
+                    .o_mail_preview_image .fa-circle-o {
+                        display: none;
                     }
                     .o_preview_info {
                         margin-left: 10px;
